Add new features

--- a/pos_extensions/views/pos_restaurant_templates.xml
+++ b/pos_extensions/views/pos_restaurant_templates.xml
@@ -3,7 +3,9 @@
 
         <template id="assets" inherit_id="point_of_sale.assets">
           <xpath expr="." position="inside">
+          	<script type="text/javascript" src="/pos_extensions/static/src/js/models.js"></script>
               <script type="text/javascript" src="/pos_extensions/static/src/js/floor.js"></script>
+              <script type="text/javascript" src="/pos_extensions/static/src/js/notes.js"></script>
           </xpath>
           <xpath expr="//link[@id='pos-stylesheet']" position="after">
               <!-- <link rel="stylesheet" href="/pos_restaurant/static/src/css/restaurant.css"/> -->
